boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_class_with_pass_handle_constructor.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
const _ReceiverFinalizer: FinalizationRegistry<number> | null =
  typeof FinalizationRegistry === "undefined"
    ? null
    : new FinalizationRegistry<number>((handle) => {
        _exports.boltffi_receiver_free(handle);
      });

export class Receiver {
  private _handle: number;
  private _disposed: boolean;

  private constructor(handle: number) {
    this._handle = handle;
    this._disposed = false;
    _ReceiverFinalizer?.register(this, handle, this);
  }

  static _fromHandle(handle: number): Receiver {
    if (handle === 0) {
      throw new Error("Receiver received a null handle");
    }
    return new Receiver(handle);
  }

  [Symbol.dispose](): void {
    this.dispose();
  }

  dispose(): void {
    if (this._disposed) {
      return;
    }
    this._disposed = true;
    _ReceiverFinalizer?.unregister(this);
    _exports.boltffi_receiver_free(this._handle);
    this._handle = 0;
  }

  /**
   * moves this rust-owned handle into the ffi callee; this wrapper must not be used afterward (mirrors swift `takeHandle()`).
   */
  takeHandle(): number {
    if (this._disposed) {
      throw new Error("Receiver has been disposed");
    }
    if (this._handle === 0) {
      throw new Error("Receiver received a null handle");
    }
    this._disposed = true;
    _ReceiverFinalizer?.unregister(this);
    const h = this._handle;
    this._handle = 0;
    return h;
  }

  private _assertNotDisposed(): void {
    if (this._disposed) {
      throw new Error("Receiver has been disposed");
    }
  }

  static new(endpoint: Endpoint): Receiver {
    const endpoint_handle = endpoint.takeHandle();
    const handle = _exports.boltffi_receiver_new(endpoint_handle);
    return Receiver._fromHandle(handle);
  }
}
