boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_function_direct_return.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
/**
 * Adds two numbers
 */
export function add(a: number, b: number): number {
  return _exports.boltffi_add(a, b);
}
