boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_function_wire_encoded_return.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
export function getUsers(): User[] {
  const packed = _exports.boltffi_get_users() as bigint;
  const reader = _module.takePackedBuffer(packed);
  return reader.readArray(() => decodeUser(reader));
}
