boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_preamble_wasm_bindgen_glue.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: output
---
/// <reference lib="esnext.disposable" />
import { WireReader, WireWriter, BoltFFIModule, instantiateBoltFFI, wireStringSize } from "@boltffi/runtime";
import type { Duration, WireCodec, BoltFFIImports } from "@boltffi/runtime";
import { __wbg_get_imports, __wbg_finalize_init } from "./demo_wbg.js";

const EXPECTED_ABI_VERSION = 1;
const _callback_handle_js_namespace_start = 0x80000000;
const _callback_handle_key = (handle: number): number => handle >>> 0;

/** string errors from ffi status-code paths (mirrors swift `FfiError`). */
export class FfiError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "FfiError";
  }
}

let _module: BoltFFIModule;
let _exports: WasmExports;
const _callbackImports: Record<string, WebAssembly.ImportValue> = {};

export default async function init(source: BufferSource | Response): Promise<void> {
  _module = await instantiateBoltFFI(source, EXPECTED_ABI_VERSION, {
    env: _callbackImports,
    wasmBindgen: {
      getImports: __wbg_get_imports,
      finalize: __wbg_finalize_init,
    },
  });
  _exports = _module.exports as unknown as WasmExports;
}
