boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_wasm_exports.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
export interface WasmExports {
  memory: WebAssembly.Memory;
  boltffi_wasm_abi_version(): number;
  boltffi_wasm_alloc(size: number): number;
  boltffi_wasm_free(ptr: number, size: number): void;
  boltffi_wasm_free_buf(ptr: number, size: number, align: number): void;
  boltffi_wasm_realloc(ptr: number, oldSize: number, newSize: number): number;
  boltffi_wasm_free_string_return(ptr: number, len: number): void;
  boltffi_wasm_return_slot_addr(): number;
  boltffi_free_buf(ptr: number): void;
  boltffi_alloc_return_buffer(len: number): number;
  boltffi_free_return_buffer(ptr: number, len: number): void;
  boltffi_add(a: number, b: number): number;
}
